[project]
name = "crowbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.2.0",
    "audiodiffusion>=1.5.7",
    "diffusers>=0.31.0",
    "librosa>=0.10.2.post1",
    "llvmlite==0.39.1",
    "numba==0.56.4",
    "numpy<2",
    "requests>=2.32.3",
    "transformers>=4.47.0",
]
